--- a/js29.html
+++ b/js29.html
@@ -4,8 +4,8 @@
 	<title></title>
 	<script type="text/javascript">
 		function success(){
-			username="sreya";
-			password="sreya123";
+			username="admin";
+			password="admin123";
 			fnam=document.getElementById('f_name').value;
 			psd=document.getElementById('pswrd').value;
 			if(username==fnam && password==psd){
